@@ -1,5 +1,6 @@
 -------------------------- aqp 1.3-3 (2012-12-06) --------------------------
 * new function subsetProfiles() for simpler subsetting of SoilProfileCollection objects via site or horizon-level attributes
+* get.ml.hz() now returns a 'confidence' for each horizon (as a percent)
 
 
 -------------------------- aqp 1.3-2 (2012-11-01) --------------------------
